--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -56,7 +56,7 @@ pipeline {
                     git config user.email "poojakpatil1997@gmail.com"
                     git config user.name "Pooja Patil"
                     BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i +e "s/ultimate-cicd-pro.*/ultimate-cicd-pro:${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    sed -i -e "s/ultimate-cicd-pro.*/ultimate-cicd-pro:${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
